remove clerk add docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
-version: '3.8'
+# =====================================================
+# PromptMinder Docker Compose 配置
+# 一键部署本地 Supabase 栈 + 应用
+# =====================================================
 
 services:
-  # Existing Postgres DB (used by app and Supabase services)
+  # =====================================================
+  # 数据库服务
+  # =====================================================
   db:
     image: postgres:15-alpine
     restart: unless-stopped
@@ -11,11 +16,19 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-promptminder}
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./sql:/docker-entrypoint-initdb.d:ro
+      # 使用合并的初始化脚本
+      - ./docker/init-db:/docker-entrypoint-initdb.d:ro
     ports:
       - '${DB_PORT:-5432}:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-promptminder} -d ${POSTGRES_DB:-promptminder}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
-  # Kong API gateway for Supabase
+  # =====================================================
+  # Kong API 网关 (Supabase 入口)
+  # =====================================================
   kong:
     image: kong:3.0
     restart: unless-stopped
@@ -26,55 +39,71 @@ services:
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_DNS_ORDER: LAST,A,CNAME
     volumes:
       - ./docker/kong/kong.yml:/kong/kong.yml:ro
     ports:
       - '8000:8000'   # proxy
       - '8001:8001'   # admin
+    depends_on:
+      db:
+        condition: service_healthy
 
-  # pg_meta (Supabase metadata service)
-  pgmeta:
-    image: supabase/pg-meta:latest
+  # =====================================================
+  # PostgREST (REST API)
+  # =====================================================
+  postgrest:
+    image: postgrest/postgrest:latest
     restart: unless-stopped
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}}
+      PGRST_DB_URI: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
+      PGRST_DB_SCHEMA: public
+      PGRST_DB_ANON_ROLE: anon
+      PGRST_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
+    ports:
+      - '3002:3000'
+    depends_on:
+      db:
+        condition: service_healthy
+
+  # =====================================================
+  # pg_meta (元数据服务)
+  # =====================================================
+  pgmeta:
+    image: supabase/postgres-meta:v0.93.1
+    restart: unless-stopped
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
       PG_META_DB_SCHEMA: public
       PG_META_PORT: 3001
     ports:
       - '3001:3001'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
-  # PostgREST (Supabase REST endpoint)
-  postgrest:
-    image: postgrest/postgrest:latest
-    restart: unless-stopped
-    environment:
-      PGRST_DB_URI: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}}
-      PGRST_DB_SCHEMA: public
-      PGRST_DB_ANON_ROLE: anon
-      PGRST_JWT_SECRET: ${JWT_SECRET:-changeme}
-    ports:
-      - '3002:3000'
-    depends_on:
-      - db
-
-  # GoTrue (Auth)
+  # =====================================================
+  # GoTrue (认证服务 - 可选)
+  # =====================================================
   gotrue:
-    image: supabase/gotrue:latest
+    image: supabase/gotrue:v2.117.0
     restart: unless-stopped
     environment:
-      GOTRUE_JWT_SECRET: ${JWT_SECRET:-changeme}
+      GOTRUE_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
       GOTRUE_SITE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
+      API_EXTERNAL_URL: ${API_EXTERNAL_URL:-http://localhost:3000}
       GOTRUE_DB_DRIVER: postgres
-      GOTRUE_DB_DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}}
+      GOTRUE_DB_DATABASE_URL: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
       GOTRUE_EXTERNAL_EMAIL_ENABLED: 'true'
     ports:
       - '9999:9999'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
-  # Realtime
+  # =====================================================
+  # Realtime (实时订阅 - 可选)
+  # =====================================================
   realtime:
     image: supabase/realtime:latest
     restart: unless-stopped
@@ -87,29 +116,42 @@ services:
     ports:
       - '4000:4000'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
-  # MinIO used as S3-compatible object storage backend for Supabase storage-api
+  # =====================================================
+  # MinIO (S3 兼容存储)
+  # =====================================================
   minio:
     image: minio/minio:latest
-    command: server /data
+    command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
     ports:
       - '9000:9000'
+      - '9001:9001'  # MinIO Console
     volumes:
       - minio-data:/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+      start_period: 10s
 
-  # Supabase storage-api service
+  # =====================================================
+  # Storage API (文件存储服务 - 可选)
+  # =====================================================
   storage-api:
     image: supabase/storage-api:latest
     restart: unless-stopped
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}}
-      ANON_KEY: ${SUPABASE_ANON_KEY:-anonkey}
-      SERVICE_KEY: ${SUPABASE_SERVICE_ROLE_KEY:-service_role_key}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
+      ANON_KEY: ${SUPABASE_ANON_KEY}
+      SERVICE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      PGRST_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
       FILE_STORAGE_BACKEND: s3
       S3_ENDPOINT: http://minio:9000
       S3_REGION: us-east-1
@@ -119,53 +161,67 @@ services:
     ports:
       - '54321:54321'
     depends_on:
-      - db
-      - minio
+      db:
+        condition: service_healthy
 
-  # Supabase Studio (optional admin UI)
+  # =====================================================
+  # Supabase Studio (数据库管理界面 - 可选)
+  # =====================================================
   studio:
     image: supabase/studio:latest
     restart: unless-stopped
     environment:
-      NEXT_PUBLIC_SUPABASE_URL: ${SUPABASE_URL:-http://localhost:8000}
-      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY:-anonkey}
+      STUDIO_PG_META_URL: http://pgmeta:3001
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-promptminder}
+      DEFAULT_ORGANIZATION_NAME: PromptMinder
+      DEFAULT_PROJECT_NAME: Default
+      SUPABASE_URL: http://kong:8000
+      SUPABASE_PUBLIC_URL: http://localhost:8000
+      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+      SUPABASE_SERVICE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
     ports:
-      - '8080:8080'
+      - '8080:3000'
     depends_on:
       - kong
-
-  # Your application (existing service) — keep below so it can refer to SUPABASE envs
-  web:
-    build: .
-    depends_on:
-      - db
       - pgmeta
-      - kong
-      - postgrest
-      - gotrue
-      - realtime
-      - storage-api
+
+  # =====================================================
+  # PromptMinder 应用
+  # =====================================================
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
+      kong:
+        condition: service_started
+      postgrest:
+        condition: service_started
     environment:
       NODE_ENV: production
-      # Point the app to the local Supabase gateway (Kong proxy). Adjust if you expose different ports.
-      SUPABASE_URL: ${SUPABASE_URL:-http://localhost:8000}
-      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY:-anonkey}
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-      CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
-      AUTH_SECRET: ${AUTH_SECRET}
-      ZHIPU_API_KEY: ${ZHIPU_API_KEY}
+      # Supabase 连接配置
+      SUPABASE_URL: http://kong:8000
+      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      # 认证配置
+      AUTH_SECRET: ${AUTH_SECRET:-your-auth-secret-key-min-32-chars-here}
+      # 管理员用户名（多个用逗号分隔）
+      ADMIN_USERNAMES: ${ADMIN_USERNAMES:-admin}
+      # 应用配置
       NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}}
+      # AI 服务配置（可选）
+      ZHIPU_API_KEY: ${ZHIPU_API_KEY:-}
     ports:
       - '3000:3000'
-    restart: unless-stopped
 
+# =====================================================
+# 数据卷
+# =====================================================
 volumes:
   db-data:
+    name: promptminder-db-data
   minio-data:
-  storage-data:
-
-# Notes:
-# - This compose file provides a convenient local Supabase stack powered by MinIO for storage.
-# - You should set SUPABASE_ANON_KEY and SUPABASE_SERVICE_ROLE_KEY in an .env file for realistic keys.
-# - After starting, you'll need to initialize Supabase meta/data and create any required roles/keys; consult Supabase docs for migrations and API key generation.
+    name: promptminder-minio-data
