--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       - db-data:/var/lib/postgresql/data
       # 使用合并的初始化脚本
       - ./docker/init-db:/docker-entrypoint-initdb.d:ro
-    ports:
-      - '${DB_PORT:-5432}:5432'
+    # ports:
+    #   - '${DB_PORT:-5432}:5432'
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-promptminder} -d ${POSTGRES_DB:-promptminder}"]
       interval: 5s
@@ -42,9 +42,9 @@ services:
       KONG_DNS_ORDER: LAST,A,CNAME
     volumes:
       - ./docker/kong/kong.yml:/kong/kong.yml:ro
-    ports:
-      - '8000:8000'   # proxy
-      - '8001:8001'   # admin
+    # ports:
+    #   - '8000:8000'   # proxy
+    #   - '8001:8001'   # admin
     depends_on:
       db:
         condition: service_healthy
@@ -60,8 +60,8 @@ services:
       PGRST_DB_SCHEMA: public
       PGRST_DB_ANON_ROLE: anon
       PGRST_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
-    ports:
-      - '3002:3000'
+    # ports:
+    #   - '3002:3000'
     depends_on:
       db:
         condition: service_healthy
@@ -75,9 +75,9 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
-    ports:
-      - '9000:9000'
-      - '9001:9001'  # MinIO Console
+    # ports:
+    #   - '9000:9000'
+    #   - '9001:9001'  # MinIO Console
     volumes:
       - minio-data:/data
     restart: unless-stopped
@@ -106,8 +106,8 @@ services:
       S3_BUCKET: supabase
       S3_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
       S3_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin}
-    ports:
-      - '54321:54321'
+    # ports:
+    #   - '54321:54321'
     depends_on:
       db:
         condition: service_healthy
@@ -121,7 +121,7 @@ services:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
-    image: promptminder:0.1.0
+    image: promptminder:v0.1.0
     restart: unless-stopped
     depends_on:
       db:
@@ -131,7 +131,7 @@ services:
       postgrest:
         condition: service_started
     environment:
-      NODE_ENV: production
+      NODE_ENV: development
       # Supabase 连接配置
       SUPABASE_URL: http://kong:8000
       SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
