--- a/.env.example
+++ b/.env.example
@@ -42,8 +42,10 @@ ADMIN_USERNAMES=admin
 # 可选配置
 # -----------------------------------------------------
 
-# AI 服务配置（用于 Prompt 测试功能）
-ZHIPU_API_KEY=
+# AI 服务配置（用于 Prompt 优化和测试功能）
+CUSTOM_API_KEY=sk-xx
+CUSTOM_API_URL=https://xx/v1
+CUSTOM_MODEL_NAME=deepseek-v3
 
 # MinIO 存储配置
 MINIO_ROOT_USER=minioadmin
