--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ POSTGRES_DB=promptminder
 # 应用基础 URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
+# 开发服务器端口（可选，默认 3000）
+PORT=3000
+
 # 管理员用户名（多个用逗号分隔，这些用户注册后自动成为管理员）
 ADMIN_USERNAMES=admin
 
@@ -53,3 +56,18 @@ MINIO_ROOT_PASSWORD=minioadmin
 
 # 数据库端口（默认 5432）
 DB_PORT=5432
+
+# -----------------------------------------------------
+# 邮件服务配置（用于发送邀请邮件）
+# -----------------------------------------------------
+
+# Resend API 密钥（推荐用于生产环境）
+# 获取地址：https://resend.com/api-keys
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxx
+
+# 发件人邮箱（必须与 Resend 中验证的域名一致）
+FROM_EMAIL=noreply@yourdomain.com
+
+# 开发环境邮件配置（可选）
+# 如果不配置 RESEND_API_KEY，系统将使用开发模式
+# 邀请链接将在控制台输出，不会实际发送邮件
