--- a/package.json
+++ b/package.json
@@ -3,9 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 40000",
+    "dev:backend": "docker-compose -f docker-compose.backend.yml up -d",
+    "dev:backend:stop": "docker-compose -f docker-compose.backend.yml down",
+    "dev:backend:logs": "docker-compose -f docker-compose.backend.yml logs -f",
+    "dev:admin": "./scripts/create-admin-docker.sh",
     "build": "next build",
+    "build:docker": "docker build -t promptminder:latest .",
+    "build:docker:tag": "docker build -t promptminder:$(date +%Y%m%d-%H%M%S) .",
     "start": "next start",
+    "prod:up": "docker-compose -f docker-compose.prod.yml up -d",
+    "prod:down": "docker-compose -f docker-compose.prod.yml down",
+    "prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
+    "prod:build": "npm run build && npm run build:docker && npm run prod:up",
+    "start:dev": "./start.sh dev",
+    "start:prod": "./start.sh deploy",
+    "stop": "./start.sh stop",
+    "logs": "./start.sh logs",
+    "admin": "./start.sh admin",
+    "init-auth": "./scripts/init-auth.sh",
+    "reset": "./scripts/reset-db.sh",
+    "check": "./scripts/check-env.sh",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -53,6 +71,7 @@
     "react-select": "^5.8.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-type-animation": "^3.2.0",
+    "resend": "^3.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
