--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,6 @@
 # =====================================================
-# PromptMinder Docker Compose 配置
-# 简化版 - 仅包含必需的 Supabase 服务
+# PromptMinder Docker Compose 配置 - 开发环境
 # =====================================================
-
 services:
   # =====================================================
   # 数据库服务
@@ -18,8 +16,8 @@ services:
       - db-data:/var/lib/postgresql/data
       # 使用合并的初始化脚本
       - ./docker/init-db:/docker-entrypoint-initdb.d:ro
-    # ports:
-    #   - '${DB_PORT:-5432}:5432'
+    ports:
+      - '${DB_PORT:-5432}:5432'  # 开发环境暴露端口
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-promptminder} -d ${POSTGRES_DB:-promptminder}"]
       interval: 5s
@@ -42,9 +40,9 @@ services:
       KONG_DNS_ORDER: LAST,A,CNAME
     volumes:
       - ./docker/kong/kong.yml:/kong/kong.yml:ro
-    # ports:
-    #   - '8000:8000'   # proxy
-    #   - '8001:8001'   # admin
+    ports:
+      - '8000:8000'   # proxy - 开发环境暴露
+      - '8001:8001'   # admin - 开发环境暴露
     depends_on:
       db:
         condition: service_healthy
@@ -60,33 +58,11 @@ services:
       PGRST_DB_SCHEMA: public
       PGRST_DB_ANON_ROLE: anon
       PGRST_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
-    # ports:
-    #   - '3002:3000'
+    ports:
+      - '3002:3000'   # 开发环境暴露
     depends_on:
       db:
         condition: service_healthy
-
-  # =====================================================
-  # MinIO (S3 兼容存储)
-  # =====================================================
-  minio:
-    image: minio/minio:RELEASE.2025-09-07T16-13-09Z
-    command: server /data --console-address ":9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
-    # ports:
-    #   - '9000:9000'
-    #   - '9001:9001'  # MinIO Console
-    volumes:
-      - minio-data:/data
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "mc", "ready", "local"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-      start_period: 10s
 
   # =====================================================
   # Supabase Auth (认证服务)
@@ -140,8 +116,8 @@ services:
       # 数据库配置
       GOTRUE_DB_DRIVER: postgres
       GOTRUE_DB_DATABASE_URL: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
-    # ports:
-    #   - '9999:9999'
+    ports:
+      - '9999:9999'   # 开发环境暴露
     depends_on:
       db:
         condition: service_healthy
@@ -151,6 +127,54 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+
+  # =====================================================
+  # MinIO (S3 兼容存储)
+  # =====================================================
+  minio:
+    image: minio/minio:RELEASE.2025-09-07T16-13-09Z
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
+    ports:
+      - '9000:9000'   # 开发环境暴露
+      - '9001:9001'   # MinIO Console - 开发环境暴露
+    volumes:
+      - minio-data:/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+      start_period: 10s
+
+  # =====================================================
+  # Storage API (文件存储服务)
+  # =====================================================
+  storage-api:
+    image: supabase/storage-api:v1.32.0
+    restart: unless-stopped
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
+      ANON_KEY: ${SUPABASE_ANON_KEY}
+      SERVICE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      PGRST_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
+      FILE_STORAGE_BACKEND: s3
+      FILE_STORAGE_BACKEND_PATH: /var/lib/storage
+      S3_ENDPOINT: http://minio:9000
+      S3_REGION: us-east-1
+      S3_BUCKET: supabase
+      S3_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
+      S3_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin}
+    ports:
+      - '54321:54321'   # 开发环境暴露
+    depends_on:
+      db:
+        condition: service_healthy
+      postgrest:
+        condition: service_started
 
   # =====================================================
   # Supabase Studio (管理界面)
@@ -179,8 +203,8 @@ services:
       SUPABASE_DB_USER: ${POSTGRES_USER:-promptminder}
       SUPABASE_DB_PASSWORD: ${POSTGRES_PASSWORD:-promptminder}
       SUPABASE_DB_NAME: ${POSTGRES_DB:-promptminder}
-    # ports:
-    #   - '3333:3333'
+    ports:
+      - '3333:3333'   # 开发环境暴露
     depends_on:
       db:
         condition: service_healthy
@@ -229,6 +253,8 @@ services:
       MAX_CHILDREN: 1000
       ERL_MAX_PORTS: 65536
       ERL_MAX_ETS_TABLES: 65536
+    ports:
+      - '4000:4000'   # 开发环境暴露
     depends_on:
       db:
         condition: service_healthy
@@ -238,67 +264,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
-  # =====================================================
-  # Storage API (文件存储服务)
-  # =====================================================
-  storage-api:
-    image: supabase/storage-api:v1.32.0
-    restart: unless-stopped
-    environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER:-promptminder}:${POSTGRES_PASSWORD:-promptminder}@db:5432/${POSTGRES_DB:-promptminder}
-      ANON_KEY: ${SUPABASE_ANON_KEY}
-      SERVICE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
-      PGRST_JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-with-at-least-32-characters-1234}
-      FILE_STORAGE_BACKEND: s3
-      FILE_STORAGE_BACKEND_PATH: /var/lib/storage
-      S3_ENDPOINT: http://minio:9000
-      S3_REGION: us-east-1
-      S3_BUCKET: supabase
-      S3_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
-      S3_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin}
-    # ports:
-    #   - '54321:54321'
-    depends_on:
-      db:
-        condition: service_healthy
-      postgrest:
-        condition: service_started
-
-  # =====================================================
-  # PromptMinder 应用
-  # =====================================================
-  web:
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
-    image: promptminder:v0.1.0
-    restart: unless-stopped
-    depends_on:
-      db:
-        condition: service_healthy
-      kong:
-        condition: service_started
-      postgrest:
-        condition: service_started
-    environment:
-      NODE_ENV: development
-      # Supabase 连接配置
-      SUPABASE_URL: http://kong:8000
-      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
-      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
-      # 认证配置
-      AUTH_SECRET: ${AUTH_SECRET:-your-auth-secret-key-min-32-chars-here}
-      # 管理员用户名（多个用逗号分隔）
-      ADMIN_USERNAMES: ${ADMIN_USERNAMES:-admin}
-      # 应用配置
-      NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
-      # AI 服务配置
-      CUSTOM_API_KEY: ${CUSTOM_API_KEY:-}
-      CUSTOM_API_URL: ${CUSTOM_API_URL:-}
-      CUSTOM_MODEL_NAME: ${CUSTOM_MODEL_NAME:-}
-    ports:
-      - '3000:3000'
 
 # =====================================================
 # 数据卷
