--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.460.0",
     "motion": "^12.23.12",
-    "next": "16.0.1",
+    "next": "16.0.7",
     "openai": "^4.77.0",
     "react": "19.2.1",
     "react-copy-to-clipboard": "^5.1.0",
@@ -52,6 +52,7 @@
     "react-markdown": "^9.0.1",
     "react-select": "^5.8.3",
     "react-syntax-highlighter": "^15.6.1",
+    "prismjs": "1.30.0",
     "react-type-animation": "^3.2.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
@@ -67,7 +68,7 @@
     "@testing-library/user-event": "^14.6.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.1",
-    "jest": "^30.0.5",
+    "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.0.5",
     "mini-css-extract-plugin": "^2.9.2",
     "msw": "^2.10.4",
