--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3010",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -41,10 +41,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.460.0",
     "motion": "^12.23.12",
     "next": "16.0.7",
     "openai": "^4.77.0",
+    "prismjs": "1.30.0",
     "react": "19.2.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "19.2.1",
@@ -52,7 +54,6 @@
     "react-markdown": "^9.0.1",
     "react-select": "^5.8.3",
     "react-syntax-highlighter": "^15.6.1",
-    "prismjs": "1.30.0",
     "react-type-animation": "^3.2.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
