--- a/supabase_docker/dev/docker-compose.dev.yml
+++ b/supabase_docker/dev/docker-compose.dev.yml
@@ -1,22 +1,22 @@
 version: "3.8"
 
 services:
-  studio:
-    build:
-      context: ..
-      dockerfile: apps/studio/Dockerfile
-      target: dev
-    ports:
-      - 8082:8082
-    develop:
-      watch:
-        - action: sync
-          path: ../apps/studio
-          target: /app/apps/studio
-          ignore:
-            - node_modules/
-        - action: rebuild
-          path: package.json
+  # studio:
+  #   build:
+  #     context: ..
+  #     dockerfile: apps/studio/Dockerfile
+  #     target: dev
+  #   ports:
+  #     - 8082:8082
+  #   develop:
+  #     watch:
+  #       - action: sync
+  #         path: ../apps/studio
+  #         target: /app/apps/studio
+  #         ignore:
+  #           - node_modules/
+  #       - action: rebuild
+  #         path: package.json
 
   mail:
     container_name: supabase-mail
@@ -32,13 +32,13 @@ services:
   meta:
     ports:
       - 5555:8080
-  db:
-    restart: 'no'
-    volumes:
-      # Always use a fresh database when developing
-      - /var/lib/postgresql/data
-      # Seed data should be inserted last (alphabetical order)
-      - ./dev/data.sql:/docker-entrypoint-initdb.d/seed.sql
+  # db:
+  #   restart: 'no'
+  #   volumes:
+  #     # Always use a fresh database when developing
+  #     - /var/lib/postgresql/data
+  #     # Seed data should be inserted last (alphabetical order)
+  #     - ./dev/data.sql:/docker-entrypoint-initdb.d/seed.sql
   storage:
     volumes:
       - /var/lib/storage
