--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.2.0",
     "@supabase/supabase-js": "^2.46.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.460.0",
     "motion": "^12.23.12",
     "next": "16.0.7",
+    "next-swagger-doc": "^0.4.1",
     "openai": "^4.77.0",
     "prismjs": "1.30.0",
     "react": "19.2.1",
@@ -58,6 +60,8 @@
     "react-type-animation": "^3.2.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
+    "swagger-ui-dist": "^5.31.0",
+    "swagger-ui-react": "^5.31.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
