--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,16 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 ADMIN_USERNAMES=admin
 
 # -----------------------------------------------------
+# 站点标识配置 (Site Identity)
+# -----------------------------------------------------
+NEXT_PUBLIC_APP_NAME=PromptMinder
+NEXT_PUBLIC_APP_FAVICON=/favicon.ico
+NEXT_PUBLIC_APP_LOGO=/logo2.png
+NEXT_PUBLIC_APP_LOGO_WIDTH=100
+NEXT_PUBLIC_APP_LOGO_HEIGHT=40
+NEXT_PUBLIC_APP_DESCRIPTION="Make AI prompt management simpler and more efficient..."
+
+# -----------------------------------------------------
 # 可选配置
 # -----------------------------------------------------
 
