--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     # ports:
     #   - '${DB_PORT:-5432}:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-promptminder} -d ${POSTGRES_DB:-promptminder}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-promptminder} -d ${POSTGRES_DB:-promptminder}" ]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -82,7 +82,7 @@ services:
       - minio-data:/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mc", "ready", "local"]
+      test: [ "CMD", "mc", "ready", "local" ]
       interval: 30s
       timeout: 20s
       retries: 3
@@ -146,12 +146,22 @@ services:
       CUSTOM_API_KEY: ${CUSTOM_API_KEY:-}
       CUSTOM_API_URL: ${CUSTOM_API_URL:-}
       CUSTOM_MODEL_NAME: ${CUSTOM_MODEL_NAME:-}
+      # 站点标识配置 (可覆盖)
+      NEXT_PUBLIC_APP_NAME: ${NEXT_PUBLIC_APP_NAME:-PromptMinder}
+      NEXT_PUBLIC_APP_FAVICON: ${NEXT_PUBLIC_APP_FAVICON:-/favicon.ico}
+      NEXT_PUBLIC_APP_LOGO: ${NEXT_PUBLIC_APP_LOGO:-/logo2.png}
+      NEXT_PUBLIC_APP_LOGO_WIDTH: ${NEXT_PUBLIC_APP_LOGO_WIDTH:-40}
+      NEXT_PUBLIC_APP_LOGO_HEIGHT: ${NEXT_PUBLIC_APP_LOGO_HEIGHT:-40}
+      NEXT_PUBLIC_APP_DESCRIPTION: ${NEXT_PUBLIC_APP_DESCRIPTION:-Make AI prompt management simpler and more efficient...}
     ports:
       - '3000:3000'
-
-# =====================================================
-# 数据卷
-# =====================================================
+    volumes:
+      # 挂载自定义 Logo 和 Favicon (解开注释并放置对应文件到同级目录)
+      - ./logo.png:/app/public/custom-logo.png
+      - ./favicon.ico:/app/public/custom-favicon.ico
+      # =====================================================
+      # 数据卷
+      # =====================================================
 volumes:
   db-data:
     name: promptminder-db-data
