--- a/supabase_docker/docker-compose.yml
+++ b/supabase_docker/docker-compose.yml
@@ -14,13 +14,7 @@ services:
     image: supabase/studio:2025.12.09-sha-434634f
     restart: unless-stopped
     healthcheck:
-      test:
-        [
-          "CMD",
-          "node",
-          "-e",
-          "fetch('http://studio:3000/api/platform/profile').then((r) => {if (r.status !== 200) throw new Error(r.status)})"
-        ]
+      test: [ "CMD", "node", "-e", "fetch('http://studio:3000/api/platform/profile').then((r) => {if (r.status !== 200) throw new Error(r.status)})" ]
       timeout: 10s
       interval: 5s
       retries: 3
@@ -93,15 +87,7 @@ services:
     image: supabase/gotrue:v2.183.0
     restart: unless-stopped
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:9999/health"
-        ]
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9999/health" ]
       timeout: 5s
       interval: 5s
       retries: 3
@@ -194,10 +180,7 @@ services:
       PGRST_DB_USE_LEGACY_GUCS: "false"
       PGRST_APP_SETTINGS_JWT_SECRET: ${JWT_SECRET}
       PGRST_APP_SETTINGS_JWT_EXP: ${JWT_EXPIRY}
-    command:
-      [
-        "postgrest"
-      ]
+    command: [ "postgrest" ]
 
   realtime:
     # This container name looks inconsistent but is correct because realtime constructs tenant id by parsing the subdomain
@@ -211,11 +194,7 @@ services:
       analytics:
         condition: service_healthy
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -sSfL --head -o /dev/null -H \"Authorization: Bearer ${ANON_KEY}\" http://localhost:4000/api/tenants/realtime-dev/health"
-        ]
+      test: [ "CMD-SHELL", "curl -sSfL --head -o /dev/null -H \"Authorization: Bearer ${ANON_KEY}\" http://localhost:4000/api/tenants/realtime-dev/health" ]
       timeout: 5s
       interval: 5s
       retries: 3
@@ -245,15 +224,7 @@ services:
     volumes:
       - ./volumes/storage:/var/lib/storage:z
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://storage:5000/status"
-        ]
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://storage:5000/status" ]
       timeout: 5s
       interval: 5s
       retries: 3
@@ -289,12 +260,7 @@ services:
     volumes:
       - ./volumes/storage:/var/lib/storage:z
     healthcheck:
-      test:
-        [
-          "CMD",
-          "imgproxy",
-          "health"
-        ]
+      test: [ "CMD", "imgproxy", "health" ]
       timeout: 5s
       interval: 5s
       retries: 3
@@ -340,12 +306,7 @@ services:
       SUPABASE_DB_URL: postgresql://postgres:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       # TODO: Allow configuring VERIFY_JWT per function. This PR might help: https://github.com/supabase/cli/pull/786
       VERIFY_JWT: "${FUNCTIONS_VERIFY_JWT}"
-    command:
-      [
-        "start",
-        "--main-service",
-        "/home/deno/functions/main"
-      ]
+    command: [ "start", "--main-service", "/home/deno/functions/main" ]
 
   analytics:
     container_name: supabase-analytics
@@ -360,12 +321,7 @@ services:
     #     target: /opt/app/rel/logflare/bin/gcloud.json
     #     read_only: true
     healthcheck:
-      test:
-        [
-          "CMD",
-          "curl",
-          "http://localhost:4000/health"
-        ]
+      test: [ "CMD", "curl", "http://localhost:4000/health" ]
       timeout: 5s
       interval: 5s
       retries: 10
@@ -394,7 +350,7 @@ services:
       # GOOGLE_PROJECT_ID: ${GOOGLE_PROJECT_ID}
       # GOOGLE_PROJECT_NUMBER: ${GOOGLE_PROJECT_NUMBER}
 
-  # Comment out everything below this point if you are using an external Postgres database
+      # Comment out everything below this point if you are using an external Postgres database
   db:
     container_name: supabase-db
     image: supabase/postgres:15.8.1.085
@@ -420,15 +376,7 @@ services:
       # Use named volume to persist pgsodium decryption key between restarts
       - db-config:/etc/postgresql-custom
     healthcheck:
-      test:
-        [
-        "CMD",
-        "pg_isready",
-        "-U",
-        "postgres",
-        "-h",
-        "localhost"
-        ]
+      test: [ "CMD", "pg_isready", "-U", "postgres", "-h", "localhost" ]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -462,25 +410,13 @@ services:
       - ./volumes/logs/vector.yml:/etc/vector/vector.yml:ro,z
       - ${DOCKER_SOCKET_LOCATION}:/var/run/docker.sock:ro,z
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://vector:9001/health"
-        ]
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://vector:9001/health" ]
       timeout: 5s
       interval: 5s
       retries: 3
     environment:
       LOGFLARE_PUBLIC_ACCESS_TOKEN: ${LOGFLARE_PUBLIC_ACCESS_TOKEN}
-    command:
-      [
-        "--config",
-        "/etc/vector/vector.yml"
-      ]
+    command: [ "--config", "/etc/vector/vector.yml" ]
     security_opt:
       - "label=disable"
 
@@ -495,16 +431,7 @@ services:
     volumes:
       - ./volumes/pooler/pooler.exs:/etc/pooler/pooler.exs:ro,z
     healthcheck:
-      test:
-        [
-          "CMD",
-          "curl",
-          "-sSfL",
-          "--head",
-          "-o",
-          "/dev/null",
-          "http://127.0.0.1:4000/api/health"
-        ]
+      test: [ "CMD", "curl", "-sSfL", "--head", "-o", "/dev/null", "http://127.0.0.1:4000/api/health" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -531,45 +458,55 @@ services:
       POOLER_MAX_CLIENT_CONN: ${POOLER_MAX_CLIENT_CONN}
       POOLER_POOL_MODE: transaction
       DB_POOL_SIZE: ${POOLER_DB_POOL_SIZE}
-    command:
-      [
-        "/bin/sh",
-        "-c",
-        "/app/bin/migrate && /app/bin/supavisor eval \"$$(cat /etc/pooler/pooler.exs)\" && /app/bin/server"
-      ]
+    command: [ "/bin/sh", "-c", "/app/bin/migrate && /app/bin/supavisor eval \"$$(cat /etc/pooler/pooler.exs)\" && /app/bin/server" ]
   # =====================================================
   # PromptMinder 应用
   # =====================================================
   web:
-     # build:
-     #   context: .
-     #   dockerfile: Dockerfile
-     image: promptminder:v0.1.0
-     restart: unless-stopped
-     depends_on:
-       db:
-         condition: service_healthy
-       kong:
-         condition: service_started
-       rest:
-         condition: service_started
-     environment:
-       NODE_ENV: development
-       # Supabase 连接配置
-       SUPABASE_URL: http://kong:8000
-       SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
-       SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
-       # 认证配置
-       AUTH_SECRET: ${AUTH_SECRET:-your-auth-secret-key-min-32-chars-here}
-       # 管理员用户名（多个用逗号分隔）
-       ADMIN_USERNAMES: ${ADMIN_USERNAMES:-admin}
-       # 应用配置
-       NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
-       # AI 服务配置
-       CUSTOM_API_KEY: ${CUSTOM_API_KEY:-}
-       CUSTOM_API_URL: ${CUSTOM_API_URL:-}
-       CUSTOM_MODEL_NAME: ${CUSTOM_MODEL_NAME:-}
-     ports:
-       - '3000:3000'
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
+    image: promptminder:v0.1.1
+    restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
+      kong:
+        condition: service_started
+      rest:
+        condition: service_started
+    environment:
+      NODE_ENV: development
+      # Supabase 连接配置
+      SUPABASE_URL: http://kong:8000
+      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      # 认证配置
+      AUTH_SECRET: ${AUTH_SECRET:-your-auth-secret-key-min-32-chars-here}
+      # 管理员用户名（多个用逗号分隔）
+      ADMIN_USERNAMES: ${ADMIN_USERNAMES:-admin}
+      # 应用配置
+      NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
+      # AI 服务配置
+      CUSTOM_API_KEY: ${CUSTOM_API_KEY:-}
+      CUSTOM_API_URL: ${CUSTOM_API_URL:-}
+      CUSTOM_MODEL_NAME: ${CUSTOM_MODEL_NAME:-} # 站点标识配置 (可覆盖)
+      NEXT_PUBLIC_APP_NAME: ${NEXT_PUBLIC_APP_NAME:-PromptMinder}
+      NEXT_PUBLIC_APP_FAVICON: ${NEXT_PUBLIC_APP_FAVICON:-/favicon.ico}
+      NEXT_PUBLIC_APP_LOGO: ${NEXT_PUBLIC_APP_LOGO:-/logo2.png}
+      NEXT_PUBLIC_APP_LOGO_WIDTH: ${NEXT_PUBLIC_APP_LOGO_WIDTH:-40}
+      NEXT_PUBLIC_APP_LOGO_HEIGHT: ${NEXT_PUBLIC_APP_LOGO_HEIGHT:-40}
+      NEXT_PUBLIC_APP_DESCRIPTION: ${NEXT_PUBLIC_APP_DESCRIPTION:-Make AI prompt management simpler and more efficient...}
+      # 邮箱域名限制 (多个域名用逗号分隔)
+      NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS: ${NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS:-dev.zo}
+    ports:
+      - '3001:3000'
+    volumes:
+      # 挂载自定义 Logo 和 Favicon (解开注释并放置对应文件到同级目录)
+      - ./logo.png:/app/public/custom-logo.png
+      - ./favicon.ico:/app/public/custom-favicon.ico
+      # =====================================================
+      # 数据卷
+      # =====================================================
 volumes:
   db-config:
