--- a/supabase_docker/docker-compose.yml
+++ b/supabase_docker/docker-compose.yml
@@ -477,16 +477,18 @@ services:
         condition: service_started
     environment:
       NODE_ENV: development
-      # Supabase 连接配置
+      # Supabase 连接配置 (使用与其他 Supabase 服务一致的变量名)
       SUPABASE_URL: http://kong:8000
-      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
-      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      SUPABASE_ANON_KEY: ${ANON_KEY}
+      SUPABASE_SERVICE_ROLE_KEY: ${SERVICE_ROLE_KEY}
       # 认证配置
       AUTH_SECRET: ${AUTH_SECRET:-your-auth-secret-key-min-32-chars-here}
       # 管理员用户名（多个用逗号分隔）
       ADMIN_USERNAMES: ${ADMIN_USERNAMES:-admin}
       # 应用配置
       NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
+      # Server-side BASE_URL for runtime reading (not baked in at build time)
+      BASE_URL: ${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
       # AI 服务配置
       CUSTOM_API_KEY: ${CUSTOM_API_KEY:-}
       CUSTOM_API_URL: ${CUSTOM_API_URL:-}
@@ -500,7 +502,7 @@ services:
       # 邮箱域名限制 (多个域名用逗号分隔)
       NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS: ${NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS:-dev.zo}
     ports:
-      - '3001:3000'
+      - '3002:3000'
     volumes:
       # 挂载自定义 Logo 和 Favicon (解开注释并放置对应文件到同级目录)
       - ./logo.png:/app/public/custom-logo.png
