CUSTOM_MODEL_NAME

--- a/.env.example
+++ b/.env.example
@@ -153,7 +153,10 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3010
 
 CUSTOM_API_KEY=sk-xx
 CUSTOM_API_URL=https://xx.ai/v1
-CUSTOM_MODEL_NAME=deepseek-v3
+# Multiple models can be configured, separated by commas
+# The first model will be used as the default
+# Example: CUSTOM_MODEL_NAME=deepseek-v3,gpt-4o-mini,claude-3-haiku
+CUSTOM_MODEL_NAME=deepseek-v3,claude-haiku-4-5-20251001
 
 
 
