--- a/supabase_docker/.env.example.offical
+++ b/supabase_docker/.env.example.offical
@@ -214,3 +214,9 @@ NEXT_PUBLIC_APP_DESCRIPTION="Make AI prompt management simpler and more efficien
 
 # 邮箱域名限制 (多个域名用逗号分隔)
 NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS=gmail.com
+
+############
+# 企业邮件服务配置 (Email Hook)
+# 注意: 邮件配置现在在 PostgreSQL 函数中
+# 请修改 volumes/db/email-hook.sql 中的配置
+############
