--- a/.env.example
+++ b/.env.example
@@ -215,10 +215,13 @@ NEXT_PUBLIC_APP_DESCRIPTION="Make AI prompt management simpler and more efficien
 # 邮箱域名限制 (多个域名用逗号分隔)
 NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS=gmail.com
 
-
-
 ############
 # 企业邮件服务配置 (Email Hook)
 # 注意: 邮件配置现在在 PostgreSQL 函数中
 # 请修改 volumes/db/email-hook.sql 中的配置
 ############
+
+# Supabase Auth 验证 URL (用于邮件中的验证链接)
+SUPABASE_AUTH_URL=http://your-supabase-host:8000
+# 企业邮件 REST API 地址
+EMAIL_API_URL=http://your-email-api-host:8081/message/normal/no-attach
