email hool config

--- a/.env.example
+++ b/.env.example
@@ -223,5 +223,23 @@ NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS=gmail.com
 
 # Supabase Auth 验证 URL (用于邮件中的验证链接)
 SUPABASE_AUTH_URL=http://your-supabase-host:8000
-# 企业邮件 REST API 地址
+
+# 📌 企业邮件 REST API 地址
+# 用于: postgres数据库中 email-hook 函数调用邮件服务
+# 🔧 生产环境: 改为实际的邮件 API 地址
 EMAIL_API_URL=http://your-email-api-host:8081/message/normal/no-attach
+
+# 📌 发件人邮箱地址
+# 用于: postgres数据库中 email-hook 函数的发件人地址
+# 🔧 生产环境: 改为实际的发件人邮箱
+EMAIL_FROM=it-platform@dev.zo
+
+# 📌 邮件服务用户名
+# 用于: postgres数据库中 email-hook 函数登录邮件服务
+# 🔧 生产环境: 改为实际的用户名
+EMAIL_USERNAME=it-platform
+
+# 📌 邮件服务密码
+# 用于: postgres数据库中 email-hook 函数登录邮件服务
+# 🔧 生产环境: 改为实际的密码
+EMAIL_PASSWORD=your-email-password
