--- a/supabase_docker/.env.example.offical
+++ b/supabase_docker/.env.example.offical
@@ -407,8 +407,7 @@ NEXT_PUBLIC_ALLOWED_EMAIL_DOMAINS=gmail.com
 
 ############
 # 📧 企业邮件服务配置 (Email Hook)
-# 注意: 邮件配置现在在 PostgreSQL 函数中
-# 请修改 volumes/db/email-hook.sql 中的配置
+# 这些配置用于 PostgreSQL 中的 email-hook 函数，通过 docker-compose 传递给数据库
 ############
 
 # 📌 Supabase Auth 验证 URL（用于邮件中的验证链接）
@@ -421,6 +420,21 @@ SUPABASE_AUTH_URL=http://your-supabase-host:8000
 # 🔧 生产环境: 改为实际的邮件 API 地址
 EMAIL_API_URL=http://your-email-api-host:8081/message/normal/no-attach
 
+# 📌 发件人邮箱地址
+# 用于: postgres数据库中 email-hook 函数的发件人地址
+# 🔧 生产环境: 改为实际的发件人邮箱
+EMAIL_FROM=it-platform@dev.zo
+
+# 📌 邮件服务用户名
+# 用于: postgres数据库中 email-hook 函数登录邮件服务
+# 🔧 生产环境: 改为实际的用户名
+EMAIL_USERNAME=it-platform
+
+# 📌 邮件服务密码
+# 用于: postgres数据库中 email-hook 函数登录邮件服务
+# 🔧 生产环境: 改为实际的密码
+EMAIL_PASSWORD=your-email-password
+
 
 ############
 # 📋 端口总结（部署时需要关注的端口）
@@ -431,12 +445,12 @@ EMAIL_API_URL=http://your-email-api-host:8081/message/normal/no-attach
 #   - KONG_HTTPS_PORT (8443): HTTPS API 入口
 #   - POSTGRES_PORT (5432): PostgreSQL 数据库（通过 supavisor）
 #   - POOLER_PROXY_PORT_TRANSACTION (6543): 数据库连接池（事务模式）
-#   - web 服务 (3002): PromptMinder 应用（docker-compose 中硬编码）
+#   - web 服务 (3011): PromptMinder 应用（docker-compose 中硬编码）
 #   - analytics 服务 (4000): Logflare 分析服务
 #
 # 🔧 典型 Nginx 配置示例:
 #   - api.your-domain.com -> localhost:8000 (Kong)
-#   - app.your-domain.com -> localhost:3002 (PromptMinder)
+#   - app.your-domain.com -> localhost:3011 (PromptMinder)
 #
 # ⚠️ 修改端口时需要同步修改的配置:
 #   - KONG_HTTP_PORT: 需要同步修改 API_EXTERNAL_URL, SUPABASE_PUBLIC_URL
