--- a/supabase_docker/docker-compose.yml
+++ b/supabase_docker/docker-compose.yml
@@ -408,7 +408,13 @@ services:
         "-c",
         "app.supabase_auth_url=${SUPABASE_AUTH_URL:-http://localhost:8000}",
         "-c",
-        "app.email_api_url=${EMAIL_API_URL:-http://host.docker.internal:8081/message/normal/no-attach}"
+        "app.email_api_url=${EMAIL_API_URL:-http://host.docker.internal:8081/message/normal/no-attach}",
+        "-c",
+        "app.email_from=${EMAIL_FROM:-it-platform@dev.zo}",
+        "-c",
+        "app.email_username=${EMAIL_USERNAME:-it-platform}",
+        "-c",
+        "app.email_password=${EMAIL_PASSWORD:-}"
       ]
 
   vector:
