--- a/supabase_docker/docker-compose.yml
+++ b/supabase_docker/docker-compose.yml
@@ -408,6 +408,8 @@ services:
         "-c",
         "app.supabase_auth_url=${SUPABASE_AUTH_URL:-http://localhost:8000}",
         "-c",
+        "app.site_url=${SITE_URL:-http://localhost:3011}",
+        "-c",
         "app.email_api_url=${EMAIL_API_URL:-http://host.docker.internal:8081/message/normal/no-attach}",
         "-c",
         "app.email_from=${EMAIL_FROM:-it-platform@dev.zo}",
@@ -481,7 +483,7 @@ services:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
-    image: promptminder:v0.1.3
+    image: promptminder:v0.1.5
     restart: unless-stopped
     depends_on:
       db:
